<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <olog.dev.leeto.ui.custom_view.RoundedConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginStart="@dimen/dialog_margin"
        app:corner_radius="2dp"
        android:transitionName="@string/transition_fab"
        android:elevation="@dimen/dialog_elevation"
        android:clickable="true"
        android:focusable="true">

        <!-- journey header -->
        <TextView
            android:id="@+id/journeyBigHeader"
            style="@style/AddJourneyHeader.Big"
            android:text="@string/add_dialog_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- journey header -->
        <TextView
            android:id="@+id/journeyHeader"
            style="@style/AddJourneyHeader"
            android:text="@string/add_dialog_journey"
            app:layout_constraintTop_toBottomOf="@+id/journeyBigHeader"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- journey name -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/journeyNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/journeyHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/journeyDateLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/journeyName"
                android:hint="@string/add_dialog_name"
                style="@style/AddJourneyForm.Required" />

        </android.support.design.widget.TextInputLayout>

        <!-- date -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/journeyDateLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/journeyHeader"
            app:layout_constraintStart_toEndOf="@+id/journeyNameLayout"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/journeyDate"
                android:hint="@string/add_dialog_date"
                tools:text="@tools:sample/date/ddmmyy"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10" />

        </android.support.design.widget.TextInputLayout>



        <!--short description-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/journeyDescriptionLayout"
            app:layout_constraintTop_toBottomOf="@+id/journeyNameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/journeyDescription"
                android:hint="@string/add_dialog_short_description"
                style="@style/AddJourneyForm"
                android:maxLines="3"/>

        </android.support.design.widget.TextInputLayout>

        <!-- location header -->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/locationHeader"
            android:text="@string/add_dialog_location"
            style="@style/AddJourneyHeader"
            app:layout_constraintTop_toBottomOf="@+id/journeyDescriptionLayout"
            app:layout_constraintStart_toStartOf="parent" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/locationNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/locationHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/locationName"
                android:hint="@string/add_dialog_name"
                style="@style/AddJourneyForm.Required"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/locationAddressLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/locationNameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/locationAddress"
                android:hint="@string/add_dialog_address"
                style="@style/AddJourneyForm.Required"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/locationLatitudeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/locationAddressLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/locationLongitudeLayout"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/locationLatitude"
                android:hint="@string/add_dialog_lat"
                style="@style/AddJourneyForm.Numeric.Required" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/locationLongitudeLayout"
            app:layout_constraintTop_toBottomOf="@id/locationAddressLayout"
            app:layout_constraintStart_toEndOf="@id/locationLatitudeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/locationLongitude"
                android:hint="@string/add_dialog_long"
                style="@style/AddJourneyForm.Numeric.Required" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/locationDescriptionLayout"
            app:layout_constraintTop_toBottomOf="@id/locationLongitudeLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/locationDescription"
                android:hint="@string/add_dialog_short_description"
                style="@style/AddJourneyForm"
                android:maxLines="3" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/save"
            app:layout_constraintTop_toBottomOf="@id/locationDescriptionLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/add_dialog_save"
            android:textColor="@color/button_text_color"
            style="@style/AddJourneyButton"
            android:enabled="false"/>

        <Button
            android:id="@+id/discard"
            app:layout_constraintTop_toBottomOf="@id/locationDescriptionLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/save"
            android:text="@string/add_dialog_discard"
            style="@style/AddJourneyButton"/>

        <!--<Button-->
            <!--android:id="@+id/locationRequest"-->
            <!--app:layout_constraintTop_toBottomOf="@id/locationDescriptionLayout"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--android:text="@string/get_location"-->
            <!--android:drawableEnd="@drawable/vd_location"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--style="?attr/borderlessButtonStyle"/>-->

    </olog.dev.leeto.ui.custom_view.RoundedConstraintLayout>

</FrameLayout>